[package]
name = "sha3"
version = "1.0.0"
description = "SHA3 Wrap"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/sha3"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "~0.11.0" }
polywrap_msgpack_serde = "0.0.2-beta.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
serde_bytes = "0.11.5"
sha3 = "0.10.6"
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
